# filemanager-app

./: .bzrignore  .gitignore  AUTHORS  AutoSpacedGrid.qml  BookmarksPage.qml  CMakeLists.txt  COPYING.BSD  ConfirmDialog.qml  ConfirmDialogWithInput.qml  FileActionDialog.qml  FileDetailsPopover.qml  FileOperationProgressDialog.qml  FolderIconDelegate.qml  FolderIconView.qml  FolderListDelegate.qml  FolderListPage.qml  FolderListView.qml  GoToDialog.qml  Makefile  NotifyDialog.qml  OptionsPopover.qml  PathBar.qml  PlacesPopover.qml  PlacesSidebar.qml  README  README-Autopilot.md  README-ContentHubDesktop.md  README-Developers.md  README-Mergeproposal  README-NewBuildInstructions.md  README-PullRequests.md  README-Translations.md  README.contentHubDesktop  README.md  README.translations  SettingsPage.qml  SettingsPopover.qml  SettingsSheet.qml  Sidebar.qml  Storage.qml  (+36 more)
plugin/libnemofolderlistmodel/: CMakeLists.txt
plugin/libnemofolderlistmodel/src/: filesystemaction.cpp
plugin/libnemofolderlistmodel/src/trash/: qtrashdir.cpp
src/app/: CMakeLists.txt  fmutils.cpp  fmutils.h  main.cpp
src/app/qml/: FolderIconDelegate.qml  filemanager.qml
src/app/qml/actions/: AddBookmark.qml  ArchiveExtract.qml  Delete.qml  FileClearSelection.qml  FileCopy.qml  FileCut.qml  FilePaste.qml  GoBack.qml  GoNext.qml  GoTo.qml  NewFolder.qml  NewItem.qml  PlacesBookmarks.qml  Properties.qml  Rename.qml  Search.qml  Select.qml  SelectUnselectAll.qml  Settings.qml  Share.qml  ShowPanel.qml  TabsAdd.qml  TabsCloseThis.qml  TabsOpenInNewTab.qml  UnlockFullAccess.qml
src/app/qml/authentication/: AuthenticationHandler.qml  FingerprintDialog.qml  PasswordDialog.qml
src/app/qml/backend/: FolderListModel.qml  GlobalSettings.qml
src/app/qml/components/: AutoSpacedGrid.qml  BottomPanelStack.qml  ClipboardBottomBar.qml  FolderDelegateActions.qml  FolderIconDelegate.qml  FolderIconView.qml  FolderListDelegate.qml  FolderListModelBackend.qml  FolderListView.qml  HorizontalOptionSelector.qml  NetAuthenticationHandler.qml  PathBar.qml  PathHistoryRow.qml  PlacesBottomEdge.qml  PlacesSidebar.qml  ResizeableSidebar.qml  SectionDivider.qml  SelectionBottomBar.qml  Sidebar.qml  SidebarPageLayout.qml  SuruSheetStyle.qml  TextualButtonStyle.qml  VerticalDivider.qml
src/app/qml/content-hub/: FileOpener.qml  contenttyperesolver.js
src/app/qml/dialogs/: ConfirmExtractDialog.qml  ConfirmMultipleDeleteDialog.qml  ConfirmRenameDialog.qml  ConfirmSingleDeleteDialog.qml  CreateFileDialog.qml  CreateFolderDialog.qml  CreateItemDialog.qml  ExtractingDialog.qml  FileOperationProgressDialog.qml  NetAuthenticationDialog.qml  NotifyDialog.qml  OpenArchiveDialog.qml  OpenWithDialog.qml
src/app/qml/dialogs/templates/: ConfirmDialogWithInput.qml
src/app/qml/panels/: ClipboardBottomBar.qml  DefaultBottomBar.qml  SelectionBottomBar.qml
src/app/qml/panels/template/: Panel.qml
src/app/qml/ui/: .directory  AudioPreview.qml  AuthenticationDialog.qml  ConfirmDialog.qml  ConfirmDialogWithInput.qml  FileActionDialog.qml  FileDetailsPopover.qml  FileOperationProgressDialog.qml  FolderListPage.qml  FolderListPageDefaultHeader.qml  FolderListPagePickModeHeader.qml  FolderListPageSearchHeader.qml  FolderListPageSelectionHeader.qml  GoToDialog.qml  ImagePreview.qml  NetAuthenticationDialog.qml  NotifyDialog.qml  PlacesPage.qml  PlacesPopover.qml  SettingsSheet.qml  VideoPreview.qml  ViewPopover.qml
src/app/qml/upstream/: FakeHeader.qml  PageWithBottomEdge.qml
src/app/qml/views/: FolderDelegateActions.qml  FolderIconDelegate.qml  FolderIconView.qml  FolderListDelegate.qml  FolderListView.qml
src/plugin/: CMakeLists.txt
src/plugin/archives/: archives.cpp  archives.h
src/plugin/folderlistmodel/: CMakeLists.txt  CMakeLists.txt.mz  cleanurl.cpp  cleanurl.h  clipboard.cpp  clipboard.h  diritemabstractlistmodel.h  diriteminfo.cpp  diriteminfo.h  dirmodel.cpp  dirmodel.h  dirselection.cpp  dirselection.h  externalfswatcher.cpp  externalfswatcher.h  filecompare.cpp  filecompare.h  filesystemaction.cpp  filesystemaction.h  fmutil.cpp  fmutil.h  folderlistmodel.pri  imageprovider.cpp  imageprovider.h  iorequest.cpp  iorequest.h  iorequestworker.cpp  location.cpp  location.h  locationitemdir.cpp  locationitemdir.h  locationitemdiriterator.cpp  locationitemdiriterator.h  locationitemfile.cpp  locationitemfile.h  locationsfactory.cpp  locationsfactory.h  locationurl.cpp  locationurl.h  networklistworker.cpp  (+7 more)
src/plugin/folderlistmodel/disk/: disklocation.cpp  disklocation.h  disklocationitemdir.cpp  disklocationitemdir.h  disklocationitemdiriterator.cpp  disklocationitemdiriterator.h  disklocationitemfile.cpp  disklocationitemfile.h
src/plugin/folderlistmodel/net/: netauthenticationdata.cpp  netauthenticationdata.h  netutil.cpp  netutil.h
src/plugin/folderlistmodel/smb/: smblistworker.cpp  smblistworker.h  smblocation.cpp  smblocation.h  smblocationauthentication.cpp  smblocationauthentication.h
src/plugin/folderlistmodel/smb/qsambaclient/: qsambaclient.pri  qsambaclient_test.pro
src/plugin/folderlistmodel/smb/qsambaclient/src/: smbiteminfo.cpp  smbiteminfo.h  smblocationdiriterator.cpp  smblocationdiriterator.h  (+12 more)
src/plugin/folderlistmodel/trash/: qtrashdir.cpp  qtrashdir.h  qtrashutilinfo.cpp  qtrashutilinfo.h  trashiteminfo.cpp  trashiteminfo.h  trashlocation.cpp  trashlocation.h
src/plugin/pamauthentication/: CMakeLists.txt  pamauthentication.cpp  pamauthentication.h  pamauthentication_plugin.cpp
src/plugin/placesmodel/: CMakeLists.txt  placesmodel.cpp  placesmodel.h  placesmodel_plugin.cpp  qmtabparser.cpp  qmtabparser.h  suggestion.diff
src/plugin/test_folderlistmodel/regression/: regression_folderlilstmodel.pro  tempfiles.cpp  tst_folderlistmodel.cpp
src/plugin/test_folderlistmodel/simpleUI/: authenticationdialog.ui  placesmodel.cpp  res.qrc  simplelist.cpp  simplelist.h  simplelist.ui  simpleslots.cpp  simpleui.pro
src/plugin/test_placesmodel/: placesmodeltest.cpp  test_placesmodel.pro
src/plugin/xdguserdir/: CMakeLists.txt  qmldir  xdguserdir.cpp  xdguserdir.h  xdguserdir_plugin.cpp  xdguserdir_plugin.h
(+182 files in other folders)
